# social-networks

./: pyproject.toml
apps/: basic_viz.py  dynamic_interactions.py  interactive_viz.py  two_viz.py
notebooks/: G1_adjlist.txt  edges.txt  graph.html  hello.ipynb  networkx_viz.ipynb  week_1_load_graph.ipynb
notebooks/week_1/: Creating and Manipulating Graphs with NetworkX.ipynb  Loading Graphs in NetworkX.ipynb
notebooks/week_1/assignment_1/: assignment1.ipynb
notes/: week-1.org
src/social_networks/: __init__.py
